# battery-privacy

./: .gitignore  Cargo.toml
examples/: comm_cost.rs  optimization.rs  prove.rs  simple.rs
scripts/: benchmarks.R  benchmarks.py  benchmarks_comm.py  comm.py  max.py  opt.py  opt_total.py  out_comm_u32.csv  out_input_shares_u32.csv  out_times_u32.csv  share.R  times.R
src/: beaver.rs  c_ffi.rs  gadgets.rs  lib.rs  power_type.rs  server.rs  sum_vec.rs
tock-example/battery_client/: Makefile  layout.ld  main.c
tock-example/battery_client/librust_app/: Cargo.toml  Makefile  test
tock-example/battery_client/librust_app/.cargo/: config.toml
tock-example/battery_client/librust_app/src/: allocator.rs  codec.rs  fft.rs  field.rs  fp.rs  lib.rs  polynomial.rs  prng.rs  rand.rs  utils.rs
tock-example/battery_client/librust_app/src/client/: mod.rs  power_type.rs
tock-example/battery_client/librust_app/src/flp/: gadgets.rs  mod.rs
tock-example/battery_client/librust_app/src/vdaf/: mod.rs  prg.rs  prio3.rs
