[package]
name = "bprivacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prio = {path = "../libprio-rs"}
rand = "0.8.5"
fixed = "^1.19"
lz4 = "1.24.0"
bitvec = "1.0.1"

[features]
ram = []
opt = []

[profile.release]
debug = true
