[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib"]

[profile.dev]
panic = 'abort'

[profile.release]
opt-level = 'z'
#lto = true
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.2", optional = true }
ctr = { version = "0.9.2", optional = true }
cmac = { version = "0.7.1", optional = true }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }
libc = "0.2.139"
byteorder = { version = "1.4.3", default-features = false }
getrandom = { version = "0.2.8", default-feature = false, features = ["custom"] }

[features]
default = ["crypto-dependencies"]
crypto-dependencies = ["aes", "ctr", "cmac"]
